[package]
name = "massive-meilisearch-sampling"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
csv = "1.2.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
